# intelligent-loan-processing-agent

./: .gitignore  README.md  agent.mermaid  entry-points.json  main.py  project.uiproj  pyproject.toml  uipath.json
evaluations/eval-sets/: smoke-test.json
evaluations/evaluators/: exact-match.json
examples/: sample-input.json
